Overflow hack fix

--- a/ideaForListItemView.html
+++ b/ideaForListItemView.html
@@ -7,7 +7,7 @@
 <div class="list-item">
 <h3 class="list-item-name">Panchi Aise Aate Hain</h3>
 <h4 class="list-item-author">Vijay Tendulkar</h4>
-<br style="clear:both;">
+<br style="clear:both;":>
 <div class="list-item-synt">Synopsis</div>
 <p class="list-item-syn">Story goes like this</p>
 <div class="desc1">Cast(M/F)   :4/2 | #Acts:3 | Duration: Full-Length</div>
